# TP3_PIPELINE_BIS

./: .gitignore  README.md  app_streamlit.py  enrichissement_df.ipynb  pyproject.toml  requirements.txt  test_charts.ipynb
data/processed/: geo_dataset_20251217_140037.parquet
data/raw/: geo_enriched_raw_20251217_140036.json
data/reports/: geo_dataset_20251217_140037.md
notebooks/: Untitled.ipynb  exploration.ipynb  test.ipynb
pipeline/: config.py  models.py  quality.py  transformer.py
pipeline/fetchers/: adresse.py  base.py
utils/: charts.py  chatbot.py  data.py
